Изменения, которые будут включены в коммит: 	изменено:      gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
-NEXUS_GRADLE_PLUGINS_URL= https://nexus.covox.ru/content/repositories/gradle/
-NEXUS_MAVEN_CENTRAL_URL=  https://nexus.covox.ru/content/repositories/central/
-NEXUS_RELEASE_URL=        https://nexus.covox.ru/content/repositories/releases/
-NEXUS_SNAPSHOT_URL=       https://nexus.covox.ru/content/repositories/snapshots/
+NEXUS_GRADLE_PLUGINS_URL= https://nexus.dev.sberinsur.local/repository/gradle/
+NEXUS_MAVEN_CENTRAL_URL=  https://nexus.dev.sberinsur.local/repository/maven-central/
+NEXUS_RELEASE_URL=        https://nexus.dev.sberinsur.local/repository/maven-releases/
+NEXUS_SNAPSHOT_URL=       https://nexus.dev.sberinsur.local/repository/maven-general-snapshots/
 NEXUS_USER=developer
 NEXUS_PASSWORD=developer
 
-int_commons_version=1.0.0.local
+int_commons_version=1.0.1.local
 kafka_openid_version=1.0.0.124-SNAPSHOT
 BUILD_ID=124-SNAPSHOT
