--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,8 @@ NEXUS_SNAPSHOT_URL=       https://nexus.dev.sberinsur.local/repository/maven-gen
 NEXUS_USER=developer
 NEXUS_PASSWORD=developer
 
-int_commons_version=1.0.1.local
+int_commons_version=1.3.0.83
 kafka_openid_version=1.0.0.124-SNAPSHOT
 BUILD_ID=124-SNAPSHOT
+audit_commons_version=1.0.1.min
+
