--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,18 @@ NEXUS_SNAPSHOT_URL=       https://nexus.dev.sberinsur.local/repository/maven-gen
 NEXUS_USER=developer
 NEXUS_PASSWORD=developer
 
+SERVICE_VERSION=0.0.0
+BUILD_ID=0-SNAPSHOT
+
+# SPECIFY ONLY DEPENDENT LIBRARIES AT build.gradle
 int_commons_version=1.3.0.83
 kafka_openid_version=1.0.0.124-SNAPSHOT
-BUILD_ID=124-SNAPSHOT
 audit_commons_version=1.0.1.min
 
+systemProp.sonar.host.url=http://do-sonarqube.sberinsur.local:9000
+systemProp.sonar.login=37359108907bcfd3e0089cebff7fa862b2781bfb
+;;
+systemProp.sonar.projectKey=template
+
+systemProp.gradle.wrapperUser=developer
+systemProp.gradle.wrapperPassword=developer
