--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -7,29 +7,28 @@ spring:
     version: 1.0
   cloud:
     consul:
-      host: http://did-cnl-01.sberinsur.local
+      host: ${docker.consulHost:did-cnl-01.sberinsur.local}
       port: 8500
       discovery:
         instanceId: ${spring.application.name}:${docker.instanceId}
         healthCheckPath: ${management.endpoints.web.base-path}/health
         healthCheckInterval: 20s
-        tags: template
+        tags: service=${spring.application.name}
       config:
         format: FILES
-        prefix: inSure/develop
+        prefix: ${docker.consulConfigPrefix:inSure/develop}
         enabled: true
         failFast: false
     vault:
-      host: dev.covox.ru
+      host: ${docker.vaultHost}
       port: 443
       scheme: https
-      uri: https://dev.covox.ru/vault
       connection-timeout: 5000
       read-timeout: 5000
       authentication: TOKEN
-      token: 53c09aa3-cc69-57cb-6d24-528747446c92
+      token: ${docker.vaultToken}
 kafka:
-  bootstrapServers: 192.168.88.36:9092,192.168.88.37:9092,192.168.88.38:9092
+  bootstrapServers: did-kfk-01.sberinsur.local:9092,did-kfk-02.sberinsur.local:9092,did-kfk-03.sberinsur.local:9092
   errorTopic: ${spring.application.name}_error_topic
   properties:
     "[max.request.size]": 52428800
@@ -58,5 +57,5 @@ audit:
   markerName: AUDIT_SEC
 logging:
   logstash:
-    host: 10.15.20.1:5566
+    host: sv-mcrsrv-elk-04.sberinsur.local:5544
 
