--- a/build.gradle
+++ b/build.gradle
@@ -62,9 +62,10 @@ if (hasProperty("teamcity")) {
     // SPECIFY ONLY DEPENDENT LIBRARIES
     // left variable - name used in your code
     // on right - property that is will pass from teamcity, DASH - DELIMITER!
+    // TODO: Set your dependent libraries
     int_commons_version = property("int-commons-version")
     kafka_openid_version = property("kafka-openid-version")
-    audit_commons_version = property("audit-commons-version")
+    audit_commons_version = property("audit-commons-versions")
 } else {
     version = "${SERVICE_VERSION}.${BUILD_ID}".toString()
 }
