--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ BUILD_ID=0-SNAPSHOT
 
 # SPECIFY ONLY DEPENDENT LIBRARIES AT build.gradle
 int_commons_version=1.3.0.83
-kafka_openid_version=1.0.0.124-SNAPSHOT
+kafka_openid_version=1.2.1.12
 audit_commons_version=1.0.1.min
 
 systemProp.sonar.host.url=http://do-sonarqube.sberinsur.local:9000
