--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,6 +1,7 @@
 service:
-  name: template
-  versions: 1.0
+  application:
+    name: template
+    versions: 1.0
 spring:
   application:
     name: template
@@ -27,6 +28,9 @@ spring:
       read-timeout: 5000
       authentication: TOKEN
       token: ${docker.vaultToken}
+service:
+  name: ${spring.application.name}
+  versions: 1.0
 kafka:
   bootstrapServers: did-kfk-01.sberinsur.local:9092,did-kfk-02.sberinsur.local:9092,did-kfk-03.sberinsur.local:9092
   errorTopic: ${spring.application.name}_error_topic
