--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,7 +1,6 @@
 service:
-  application:
-    name: template
-    versions: 1.0
+  name: ${spring.application.name}
+  versions: 1.0
 spring:
   application:
     name: template
@@ -28,9 +27,9 @@ spring:
       read-timeout: 5000
       authentication: TOKEN
       token: ${docker.vaultToken}
-service:
-  name: ${spring.application.name}
-  versions: 1.0
+      generic:
+        enabled: true
+        backend: insure
 kafka:
   bootstrapServers: did-kfk-01.sberinsur.local:9092,did-kfk-02.sberinsur.local:9092,did-kfk-03.sberinsur.local:9092
   errorTopic: ${spring.application.name}_error_topic
