--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ repositories {
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-actuator'
   implementation 'org.springframework.boot:spring-boot-starter-web'
+  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
   implementation "ch.qos.logback:logback-classic"
@@ -42,6 +43,9 @@ dependencies {
   implementation "com.fasterxml.jackson.core:jackson-annotations"
   implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
   annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
+  implementation 'org.liquibase:liquibase-core'
+  runtimeOnly 'com.h2database:h2'
 
   compileOnly 'org.projectlombok:lombok:1.18.12'
   testCompile 'org.projectlombok:lombok:1.18.12'
