--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,4 +5,16 @@ spring:
   application:
     name: liquibase-project
     version: 1.0
-
+  liquibase:
+    enabled: true
+  datasource:
+    url: jdbc:h2:file:./db
+    username: u
+    password: 1
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: none
+  h2:
+    console:
+      enabled: true
