--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,8 @@ dependencies {
   annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
   implementation 'org.liquibase:liquibase-core'
-  runtimeOnly 'com.h2database:h2'
+  //runtimeOnly 'com.h2database:h2'
+  compileOnly "mysql:mysql-connector-java"
 
   compileOnly 'org.projectlombok:lombok:1.18.12'
   testCompile 'org.projectlombok:lombok:1.18.12'
