--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,13 +8,20 @@ spring:
   liquibase:
     enabled: true
   datasource:
-    url: jdbc:h2:file:./db
-    username: u
-    password: 1
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/myDB
+    username: root
+    password: Qw123456
+    #url: jdbc:h2:file:./db
+    #username: u
+    #password: 1
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    #database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.MySQLDialect
+    #database-platform: org.hibernate.dialect.MySQL5Dialect
+    show-sql: true
     hibernate:
       ddl-auto: none
-  h2:
-    console:
-      enabled: true
+  #h2:
+    #console:
+      #enabled: true
