--- a/src/main/resources/db/changelog/changeset/change-author-name-column.yaml
+++ b/src/main/resources/db/changelog/changeset/change-author-name-column.yaml
@@ -5,5 +5,6 @@ databaseChangeLog:
       changes:
         - renameColumn:
             newColumnName: fullname
+            columnDataType: varchar(200)
             oldColumnName: name
-            tableName: author
+            tableName: AUTHOR
